--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -12,7 +12,7 @@ events {
 
 
 http {
-    include       conf/mime.types;
+    include       /home/dingjing/code/nginx/conf/mime.types;
     default_type  application/octet-stream;
 
     sendfile  on;
